Use `FacetPresenter` to handle section indices/count
This changes all facet partials (both current UI and new all content
finder UI) to use `FacetPresenter` instead of manipulating and passing
index and count values through several layers of view code.

Where appropriate, it also cleans up the old partials to use idiomatic
modern Ruby syntax, better spacing, and Rails-y underscored data
attribute values.

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -45,9 +45,7 @@
         </div>
         <div class="facets__content" data-module="ga4-event-tracker" data-ga4-filter-container>
           <% facets.each do |facet| %>
-            <%= render partial: facet, object: facet, locals: {
-              index: facet.section_index, count: facet.section_count,
-            } %>
+            <%= render facet %>
           <% end %>
           <div class="facets__tags-block js-mobile-facet-tag-block"  data-module="remove-filter">
             <%= render "facet_tags", facet_tags.present %>
