--- a/app/views/finders/_radio_facet.html.erb
+++ b/app/views/finders/_radio_facet.html.erb
@@ -1,4 +1,15 @@
-<%= tag.div(class: "facet-container", data: { "ga4-change-category": "update-filter radio", "ga4-filter-parent": radio_facet.ga4_section, "ga4-section": "", "ga4-index": { index_section: index + 1, index_section_count: count } }) do %>
+<%= tag.div(
+  class: "facet-container",
+  data: {
+    ga4_change_category: "update-filter radio",
+    ga4_filter_parent: radio_facet.ga4_section,
+    ga4_section: "",
+    ga4_index: {
+      index_section: radio_facet.section_index,
+      index_section_count: radio_facet.section_count,
+    },
+  }
+) do %>
   <%= render "govuk_publishing_components/components/radio", {
     name: radio_facet.key,
     small: true,
