--- a/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
@@ -3,9 +3,14 @@
   visually_hidden_heading_prefix: "Filter by",
   status_text: taxon_facet.status_text,
   id: "facet_taxon_#{taxon_facet.key}",
-  index_section: index,
-  index_section_count: count,
-  data_attributes: { ga4_index: { index_section: index + 1, index_section_count: count } },
+  index_section: taxon_facet.section_index,
+  index_section_count: taxon_facet.section_count,
+  data_attributes: {
+    ga4_index: {
+      index_section: taxon_facet.section_index,
+      index_section_count: taxon_facet.section_count,
+    },
+  },
   change_category: "update-filter select",
   classes: "js-all-content-finder-taxonomy-select"
 } do %>
