All content finder: Fix GA4 ecommerce result count
The GA4 Javascript in GOV.UK Publishing Components requires the result
count to be marked up in a container with an ID of `js-result-count` to
be tracked. This adds this ID to the relevant element in the filter
panel component.

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -41,7 +41,7 @@
     <% end %>
 
     <% if result_text.present? %>
-      <%= tag.h2(result_text, class: "app-c-filter-panel__count") %>
+      <%= tag.h2(result_text, id: "js-result-count", class: "app-c-filter-panel__count") %>
     <% end %>
   </div>
 
