All content finder: Fix tracking of filter removal
The filter "tags" when removed include the visually hidden prefix which
is messing up analytics. This adds an explicit `text` property to the
event equal to only the actually displayed text.

Also refactors the displayed text into a property on the item returned
by the presenter for the filter tags.

--- a/app/views/components/_filter_summary.html.erb
+++ b/app/views/components/_filter_summary.html.erb
@@ -33,6 +33,7 @@
               ga4_event: {
                 event_name: "select_content",
                 type: "finder",
+                text: filter[:displayed_text],
                 section: filter[:label],
                 action: "remove"
               }
@@ -40,7 +41,7 @@
           ) do %>
             <span class="app-c-filter-summary__remove-filter-text">
               <%= tag.span(filter[:visually_hidden_prefix], class: "govuk-visually-hidden") %>
-              <%= filter[:label] %>: <%= filter[:value] %>
+              <%= filter[:displayed_text] %>
             </span>
           <% end %>
         </li>
