Filter panel: Clear button should also include section
This was missed off somehow.

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -83,6 +83,8 @@
               text: button_text,
               section: button_text,
               action: "remove",
+              index_section: 0,
+              index_section_count: section_count,
             }
           }
         ) %>
