Filter panel: Fix tracking text for buttons
The apply/clear buttons were wrongly returning the "Filter and sort"
button's text instead of their own.

Note that the apply button needs a text value set manually as the
default tracking JS doesn't pick up on it.

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -62,7 +62,7 @@
           ga4_event: {
             event_name: "select_content",
             type: "finder",
-            text: button_text,
+            text: "Apply filters",
             section: button_text,
             action: "search",
             index_section: 0,
@@ -80,7 +80,6 @@
             ga4_event: {
               event_name: "select_content",
               type: "finder",
-              text: button_text,
               section: button_text,
               action: "remove",
               index_section: 0,
