--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -99,8 +99,8 @@
 
         <% if filters_presenter.any_filters? %>
           <%= render "components/filter_summary", {
-            clear_all_href: filters_presenter.reset_url,
-            clear_all_text: "Clear all filters",
+            reset_link_href: filters_presenter.reset_url,
+            reset_link_text: "Clear all filters",
             heading_level: 3,
             heading_text: "Active filters",
             filters: filters_presenter.summary_items,
