--- a/app/views/finders/_date_facet.html.erb
+++ b/app/views/finders/_date_facet.html.erb
@@ -2,8 +2,8 @@
   <%= render "components/date_filter", {
     name: date_facet.name,
     key: date_facet.key,
-    from_value: date_facet.user_supplied_from_date,
-    to_value: date_facet.user_supplied_to_date,
+    from_value: date_facet.parsed_from_date&.to_str,
+    to_value: date_facet.parsed_to_date&.to_str,
     aria_controls_id: "js-search-results-info",
     date_errors_to: date_facet.error_message_to(@search_query),
     date_errors_from: date_facet.error_message_from(@search_query),
