--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -7,7 +7,7 @@
   <%= date_input(
     "#{date_facet.key}[from]",
     date_facet.name,
-    date_facet.user_supplied_from_date,
+    date_facet.parsed_from_date&.to_hash,
     hint: "For example, 28 2 #{Date.current.year - 2}",
     error_message: date_facet.error_message_from(@search_query),
     legend_suffix: "after",
@@ -16,7 +16,7 @@
   <%= date_input(
     "#{date_facet.key}[to]",
     date_facet.name,
-    date_facet.user_supplied_to_date,
+    date_facet.parsed_to_date&.to_hash,
     hint: "For example, 13 12 #{Date.current.year - 1}",
     error_message: date_facet.error_message_to(@search_query),
     legend_suffix: "before",
