--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -1,6 +1,6 @@
 <%= render "components/filter_section", {
   **date_facet.section_attributes,
-  change_category: "update-filter text",
+  change_category: "update-filter date",
   # Note date is the only validated facet, so if there is an error, it'll be here
   open: @search_query.invalid?,
 } do %>
