All content finder: Enable parent breadcrumb
This implements the parent breadcrumb feature analogous to the existing
finders: if specific breadcrumbs are set, they are rendered instead of
the regular contextual breadcrumbs.

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -14,7 +14,16 @@
 <% end %>
 <% content_for :meta_title, content_item.title %>
 
-<%= render 'govuk_publishing_components/components/contextual_breadcrumbs', content_item: content_item.as_hash %>
+<% if @breadcrumbs.breadcrumbs %>
+  <%= render 'govuk_publishing_components/components/breadcrumbs', {
+      breadcrumbs: @breadcrumbs.breadcrumbs,
+      collapse_on_mobile: true,
+  } %>
+<% else %>
+  <%= render 'govuk_publishing_components/components/contextual_breadcrumbs', {
+      content_item: content_item.as_hash,
+  } %>
+<% end %>
 
 <%= tag.div(
   class: "app-all-content-finder",
