--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -64,7 +64,7 @@
             type: "finder",
             text: "Apply filters",
             section: button_text,
-            action: "search",
+            action: "apply",
             index_section: 0,
             index_section_count: section_count,
           }
