All content finder: Rename panel apply/clear buttons
These aren't necessarily just filters (i.e. can be sorting too), but
there isn't enough space and it would be faffy to change the text
dynamically based on what is selected.

This makes the button text more clear and concise.

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -55,14 +55,14 @@
 
     <div class="app-c-filter-panel__actions">
       <%= submit_tag(
-        "Apply filters",
+        "Apply",
         class: "govuk-button app-c-filter-panel__action app-c-filter-panel__action--submit",
         name: nil,
         data: {
           ga4_event: {
             event_name: "select_content",
             type: "finder",
-            text: "Apply filters",
+            text: "Apply",
             section: button_text,
             action: "search",
             index_section: 0,
@@ -73,7 +73,7 @@
 
       <% if show_reset_link %>
         <%= link_to(
-          "Clear all filters",
+          "Clear all",
           reset_link_href,
           class: "govuk-link govuk-link--no-visited-state app-c-filter-panel__action app-c-filter-panel__action--reset",
           data: {
