All content finder: Send `search` event on submit
This currently happens whenever the user changes the text in the
keywords field, whether they then submit the form or not (because they
legacy UI would run a search with JS on a change event).

This removes the change tracker from the keywords field, choosing
instead to send a `search` event on form submit - but only if the user
has actually changed their keywords since the last search/page load
(which is what we want to track with this event).

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -50,7 +50,7 @@
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
-        <div id="keywords" role="search" aria-label="Sitewide" data-ga4-change-category="update-keyword text">
+        <div id="keywords" role="search" aria-label="Sitewide">
           <%= render "govuk_publishing_components/components/search", {
             id: "finder-keyword-search",
             name: "keywords",
