All content finder: Use short name for date fields
This changes the date facet and filter tags for the all content finder
to use the "short name" instead of the full name for the facet fields.
Specifically, this is because we want to use the regular name ("Date")
for the section title, but the short name ("Updated") for the fields
within.

It also updates the feature test suite fixture for the all content
finder with the most recent version of the live content item and adjusts
the Cucumber features and steps accordingly.

--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -6,7 +6,7 @@
 } do %>
   <%= date_input(
     "#{date_facet.key}[from]",
-    date_facet.name,
+    date_facet.short_name,
     date_facet.parsed_from_date&.to_hash,
     hint: "For example, 28 2 #{Date.current.year - 2}",
     error_message: date_facet.error_message_from(@search_query),
@@ -15,7 +15,7 @@
 
   <%= date_input(
     "#{date_facet.key}[to]",
-    date_facet.name,
+    date_facet.short_name,
     date_facet.parsed_to_date&.to_hash,
     hint: "For example, 13 12 #{Date.current.year - 1}",
     error_message: date_facet.error_message_to(@search_query),
