All content finder: Prepare for autocomplete testing
- Use the correct JSON field for suggestions from the v1 API, until we
  switch over to v2
- Bump `govuk_publishing_components`

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -70,7 +70,7 @@
             heading_level: 1,
             margin_bottom: 0,
             source_url: @autocomplete_url,
-            source_key: "suggestions"
+            source_key: "suggested_autocomplete"
           } %>
         </div>
 
