--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -1,4 +1,14 @@
 <div class="govuk-width-container">
+  <div class="govuk-!-margin-top-4">
+    <% if content_item.has_user_research_banner? %>
+        <%= render "govuk_publishing_components/components/intervention", {
+            suggestion_text: "Help improve GOV.UK",
+            suggestion_link_text: "Sign up to take part in user research (opens in a new tab)",
+            suggestion_link_url: "https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_2bggmg6xlelrO0S",
+            new_tab: true,
+          } %>
+    <% end %>
+  </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <% if content_item.all_content_finder? %>
