Add API endpoint for search suggestions
This returns suggestions from the (internal) Search API v2, for
consumption by the autocomplete component soon to be used across GOV.UK
for site search.

- Update `gds-api-adapters` to get access to new `autocomplete` method
  for Search API v2
- Add basic API endpoint controller and route proxying to Search API v2
- Reconfigure autocomplete setup to use v2 `source_key` and the new
  endpoint's path (with an override option for local development)
- Update `govuk_publishing_components` for autocomplete tracking
  improvements

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -69,8 +69,8 @@
             wrap_label_in_a_heading: true,
             heading_level: 1,
             margin_bottom: 0,
-            source_url: @autocomplete_url,
-            source_key: "suggested_autocomplete"
+            source_url: @autocomplete_source_url,
+            source_key: "suggestions"
           } %>
         </div>
 
