Autocomplete: Use URL helper instead of `absolute_url_for`
This uses Rails's standard URL helper instead of the custom one in the
app to establish the absolute URL for the autocomplete endpoint.

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -69,7 +69,7 @@
             wrap_label_in_a_heading: true,
             heading_level: 1,
             margin_bottom: 0,
-            source_url: @autocomplete_source_url,
+            source_url: api_search_autocomplete_url(format: :json),
             source_key: "suggestions"
           } %>
         </div>
