--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -69,15 +69,25 @@
       </div>
     <% end %>
 
-    <% if content_item.related.any? %>
-      <div class="related-links govuk-grid-column-one-third">
-        <ul class="js-finder-results">
-          <% content_item.related.each do |link| %>
-            <li class="related-links__item">
-              <%= link_to link['title'], link['web_url'], class: "related-links__link" %>
-            </li>
-          <% end %>
-        </ul>
+    <% if content_item.related.any? || show_govuk_chat_promo?(content_item.base_path) %>
+      <div class="govuk-grid-column-one-third title-side">
+        <% if show_govuk_chat_promo?(content_item.base_path) %>
+          <%= render "govuk_publishing_components/components/chat_entry", {
+            margin_top_until_tablet: true,
+          } %>
+        <% end %>
+
+        <% if content_item.related.any? %>
+          <div class="related-links">
+            <ul class="js-finder-results">
+              <% content_item.related.each do |link| %>
+                <li class="related-links__item">
+                  <%= link_to link['title'], link['web_url'], class: "related-links__link" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
       </div>
     <% end %>
   </div>
