--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -1,7 +1,7 @@
 <% content_for :body do %>
 
   <%= yield :before_content %>
-
+  <%= render "govuk_web_banners/recruitment_banner" %>
   <main id="content" class="finder-frontend-content">
     <div class="finder-frontend">
       <%= yield %>
