Upgrade govuk_publishing_components to 48.0.0

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -6,7 +6,7 @@
       <% end %>
       <%= render "govuk_publishing_components/components/search", {
         aria_controls: "js-search-results-info",
-        id: "finder-keyword-search",
+        label_id: "finder-keyword-search",
         name: "keywords",
         type: 'search',
         value: result_set_presenter.user_supplied_keywords,
