--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -12,7 +12,7 @@
         <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide" data-ga4-change-category="update-keyword text">
           <%= render "govuk_publishing_components/components/search", {
             aria_controls: "js-search-results-info",
-            id: "finder-keyword-search",
+            label_id: "finder-keyword-search",
             name: "keywords",
             type: 'search',
             value: result_set_presenter.user_supplied_keywords,
