Change inverse header padding top
- option in the component has been changed to a scale, instead of true/false

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -26,7 +26,7 @@
   <% if is_inverse? %>
     <%= render "govuk_publishing_components/components/inverse_header", {
       full_width: true,
-      padding_top: false
+      padding_top: 0
     } do %>
       <%= render partial: 'show_header', locals: {
         inverse: is_inverse?,
