--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -2,7 +2,7 @@
 
   <%= yield :before_content %>
   <%= render "govuk_web_banners/recruitment_banner" %>
-  <main id="content" class="finder-frontend-content">
+  <main id="content" class="finder-frontend-content govuk-main-wrapper">
     <div class="finder-frontend">
       <%= yield %>
     </div>
